syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/default-repo/auth";

service AuthV1 {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Get(GetRequest) returns(GetResponse);
  rpc Update(UpdateRequest) returns(google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns(google.protobuf.Empty);
}

enum Role {
  Admin = 0;
  Customer = 1;
}

message UserData {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  optional Role role = 5;
}

message User {
  string uuid = 1;
  string name = 2;
  string email = 3;
  optional Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  UserData user = 1;
}

message CreateResponse {
  string UUID = 1;
}

message GetRequest {
  string UUID = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  string UUID = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}

message DeleteRequest {
  string UUID = 1;
}
